# modulexplorer

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml
src/module_explorator/: 4.4.6  5.0.0  merged  pymodaq_.py
